--- a/img/derivatives/iiif/dbitem1200200106/manifest.json
+++ b/img/derivatives/iiif/dbitem1200200106/manifest.json
@@ -10153,6 +10153,5 @@ layout: none
       ]
     }
   ],
-  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/dbitem1200200106_000/full/full/0/default.jpg",
-  "fullwidth": "{{ '/' | absolute_url }}img/derivatives/iiif/images/dbitem1200200106_000/full/1140,/0/default.jpg"
+  "full": "{{ '/' | absolute_url }}img/derivatives/iiif/images/dbitem1200200106_000/full/full/0/default.jpg"
 }
