--- a/_config.yml
+++ b/_config.yml
@@ -108,11 +108,11 @@ search:
 menu:
   - label: 'Proyecto'
     sub:
-      - label: 'Wax'
+      - label: 'Información'
         link: '/about/'
       - label: 'Documentation'
         link: 'https://minicomp.github.io/wiki/wax/'
-      - label: 'Credits'
+      - label: 'Créditos'
         link: '/credits/'
   - label: 'Estudio'
     sub:
